1-lb-pv2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: logger
  name: logger
spec:
  containers:
  - image: nginx
    name: logger
    resources: {}
    volumeMounts:
    - mountPath: "/var/www/nginx"
      name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: log-claim
  restartPolicy: Never
status: {}
