23-multipod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-pod
  name: multi-pod
spec:
  containers:
  - image: nginx
    name: jupiter
    resources: {}
    command: ["/bin/sh"]
    args: ["-c", "sleep 4800;"]
  - image: busybox
    name: europa
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
