2b-lbconfigmap.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: time-check
  name: time-check
spec:
  containers:
  - image: busybox
    name: time-check
    command: ["/bin/sh"]
    args: ["-c", "while true; do date ; sleep $dataTIME_FREQ; done > /opt/time/time-check.log"]
    volumeMounts:
    - name: cache-volume
      mountPath: "/opt/time/"
      readOnly: true
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    # You set volumes at the Pod level, then mount them into containers inside that Pod
    - name: cache-volume
