changelabel.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2022-11-09T05:42:33Z"
  labels:
    run: v2
  name: nginx2
  namespace: default
  resourceVersion: "2246871"
  uid: a6cc8073-b2cc-4232-b6fa-4686219746fb
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: nginx2
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-krzdg
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-krzdg
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-11-09T05:42:33Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-11-09T05:42:37Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-11-09T05:42:37Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-11-09T05:42:33Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://138321e08bd8d1deb63b7b35e775b7039b677ba2273fb6ab4df89e9558c86dca
    image: nginx:latest
    imageID: docker-pullable://nginx@sha256:943c25b4b66b332184d5ba6bb18234273551593016c0e0ae906bab111548239f
    lastState: {}
    name: nginx2
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-11-09T05:42:36Z"
  hostIP: 192.168.49.2
  phase: Running
  podIP: 172.17.0.25
  podIPs:
  - ip: 172.17.0.25
  qosClass: BestEffort
  startTime: "2022-11-09T05:42:33Z"
