dep.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginxpo
  name: nginxpo
spec:
  containers:
  - image: nginx:1.18.0
    name: nginxpo
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
