multi.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sega
  name: sega
spec:
  containers:
  - image: busybox
    name: tails
    command: ['sh', '-c', 'sleep 3600']
  - image: nginx
    name: sonic
  restartPolicy: Never
status: {}
